make FormatDemo messier

--- a/force-app/main/default/classes/FormatDemo.cls
+++ b/force-app/main/default/classes/FormatDemo.cls
@@ -1,5 +1,7 @@
 public with sharing class FormatDemo {
-public Integer number;
+    private String name;
+private Integer number;                 public Boolean b;
+
     public FormatDemo(Integer number) {
     this.number=number;
 }
@@ -8,8 +10,18 @@ public static void doSomthing(String s){ System.debug('i did something: '+s);}
 
         public static void doSomethingElse(Boolean b) {
             if(b==false)System.debug('false');
+            
+            
+            
             for(Integer i=0;i<4;i++){
                 System.debug('hi');
+        Integer double = i*2;System.debug('double ' + double);
+
+
+
             }
         }
-}
+
+
+
+public static void thisMethodIsSeriouslyAllOnOneLine(SObject obj){System.debug('hi');System.debug('hi');System.debug('hi');switch on obj {when Account a{}when else {}}}}
